Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9557

GSSAPI auth plugin minimum required Heimdal version

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.11
    • 10.1.12
    • Plugins
    • None
    • FreeBSD 9.3

    Description

      Build fails with

      [ 96%] Building CXX object plugin/auth_gssapi/CMakeFiles/auth_gssapi.dir/gssapi_server.cc.o
      cd /wrkdirs/usr/ports/databases/mariadb101-server/work/mariadb-10.1.11/plugin/auth_gssapi && /usr/bin/c++   -DHAVE_CONFIG_H -DMYSQL_DYNAMIC_PLUGIN -DPLUGIN_GSSAPI -Dauth_gssapi_EXPORTS -I/wrkdirs/usr/ports/databases/mariadb101-server/work/mariadb-10.1.11/include -I/wrkdirs/usr/ports/databases/mariadb101-server/work/mariadb-10.1.11/sql -I/wrkdirs/usr/ports/databases/mariadb101-server/work/mariadb-10.1.11/pcre -I/usr/local/include -O2 -pipe -fstack-protector -fno-strict-aliasing -DWITH_INNODB_DISALLOW_WRITES -fno-exceptions -fno-rtti -O2 -pipe -fstack-protector -fno-strict-aliasing -DDBUG_OFF -fPIC -o CMakeFiles/auth_gssapi.dir/gssapi_server.cc.o -c /wrkdirs/usr/ports/databases/mariadb101-server/work/mariadb-10.1.11/plugin/auth_gssapi/gssapi_server.cc
      /wrkdirs/usr/ports/databases/mariadb101-server/work/mariadb-10.1.11/plugin/auth_gssapi/gssapi_server.cc: In function 'char* get_default_principal_name()':
      /wrkdirs/usr/ports/databases/mariadb101-server/work/mariadb-10.1.11/plugin/auth_gssapi/gssapi_server.cc:73: error: 'krb5_free_unparsed_name' was not declared in this scope
      *** [plugin/auth_gssapi/CMakeFiles/auth_gssapi.dir/gssapi_server.cc.o] Error code 1
      1 error
      *** [plugin/auth_gssapi/CMakeFiles/auth_gssapi.dir/all] Error code 2
      1 error
      *** [all] Error code 2
      1 error
      ===> Compilation failed unexpectedly.

      The build infra doesn't check for the version of Heimdal used (1.1)

      Attachments

        Activity

          spil Bernard Spil added a comment -
          1. kadmin -v
            kadmin (Heimdal 1.1.0)
            Copyright 1995-2008 Kungliga Tekniska Hâ–’gskolan
            Send bug-reports to heimdal-bugs@h5l.org
          spil Bernard Spil added a comment - kadmin -v kadmin (Heimdal 1.1.0) Copyright 1995-2008 Kungliga Tekniska Hâ–’gskolan Send bug-reports to heimdal-bugs@h5l.org

          should be fixed in https://github.com/MariaDB/server/commit/1ac64b7510fd006268936e46442f46a28250c249 , although I did not try on FreeBSD 9

          it should build on older heimdal too

          wlad Vladislav Vaintroub added a comment - should be fixed in https://github.com/MariaDB/server/commit/1ac64b7510fd006268936e46442f46a28250c249 , although I did not try on FreeBSD 9 it should build on older heimdal too

          People

            wlad Vladislav Vaintroub
            spil Bernard Spil
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.